assets img & css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,23 @@
 .sidebar .nav-link .feather {
-    margin-right: 4px;
-    color: #999;
+	margin-right: 4px;
+	color: #999;
 }
 
 .feather {
 	width: 16px;
-    height: 16px;
-    vertical-align: text-bottom;
+	height: 16px;
+	vertical-align: text-bottom;
 }
 
 .sidebar .nav-link {
-    font-weight: 500;
-    color: #333;
+	font-weight: 500;
+	color: #333;
+}
+
+th {
+	border-style: none !important;
+}
+
+.logo {
+	width: 70px;
 }
